--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,8 +19,10 @@ jobs:
   test-linux:
     strategy:
       matrix:
-        image: ["ubuntu-latest", "macos-latest"]
-    name: "Test Action - ${{ matrix.image }}"
+        image: [ "ubuntu-latest", "macos-latest" ]
+        download-compressed: [ 'true', 'false' ]
+        force: [ 'true', 'false' ]
+    name: "Test Action - (img: ${{ matrix.image }}; dlcmp: ${{ matrix.download-compressed }}; force: ${{ matrix.force }})"
     runs-on: ${{ matrix.image }}
     steps:
       - uses: actions/checkout@v3.1.0
@@ -28,7 +30,8 @@ jobs:
       - name: Setup yq
         uses: dcarbone/setup-yq-action@main
         with:
-          force: true
+          force: '${{ matrix.force }}'
+          download-compressed: '${{ matrix.download-compressed }}'
 
       - name: Check yq
         run: |
