--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -67,4 +67,4 @@ jobs:
               fi
             fi
           fi
-          if [ -z "${_err}" ]; then exit 1; fi;
+          if [ -n "${_err}" ]; then exit 1; fi;
