--- a/action.yaml
+++ b/action.yaml
@@ -14,7 +14,7 @@ inputs:
   download-compressed:
     required: false
     description: "If 'true', downloads .tar.gz of binary rather than raw binary.  Save the tubes."
-    default: "true"
+    default: 'true'
   force:
     required: false
     description: "If 'true', does not check for existing yq installation before continuing."
