--- a/action.yaml
+++ b/action.yaml
@@ -63,15 +63,42 @@ runs:
         YQ_BIN_DIR: '${{ steps.prep-unix.outputs.yq-bin-dir }}'
       run: $GITHUB_ACTION_PATH/scripts/unixish.sh
 
+    - name: 'Check for yq - Windows-ish'
+      id: yq-check-windows
+      if: runner.os == 'Windows'
+      shell: powershell
+      run: |
+        if (Get-Command "yq.exe" -ErrorAction SilentlyContinue)
+        {
+            Add-Content $Env:GITHUB_OUTPUT "found=true"
+        }
+        else
+        {
+            Add-Content $Env:GITHUB_OUTPUT "found=false"
+        }
+
+    - name: 'Prep - Windows-ish'
+      id: prep-unix
+      if: runner.os == 'Windows' && (steps.yq-check-windows.outputs.found == 'false' || inputs.force == 'true')
+      shell: powershell
+      run: |
+        Write-Host "::group::Creating temp dir ${{ runner.temp }}/yq"
+        $_dir='${{ runner.temp }}\yq'
+        New-Item "${_dir}" -ItemType Directory -Force
+        Add-Content $Env:GITHUB_OUTPUT "yq-bin-dir=${_dir}"
+        Write-Host '::endgroup::'
+
+    - name: 'Install yq - Windows-ish'
+      if: runner.os == 'Windows' && (steps.yq-check-windows.outputs.found == 'false' || inputs.force == 'true')
+      shell: powershell
+      env:
+        DL_COMPRESSED: "${{ inputs.download-compressed == 'true' }}"
+        YQ_VERSION: '${{ inputs.version }}'
+        YQ_BIN_DIR: '${{ steps.prep-unix.outputs.yq-bin-dir }}'
+      run: $GITHUB_ACTION_PATH/scripts/windowsish.ps1
+
     - name: Install into tool cache
-      if: success() && (runner.os == 'Linux' || runner.os == 'macOS') && (steps.yq-check-unix.outputs.found == 'false' || inputs.force == 'true')
+      if: (inputs.force == 'true' || steps.yq-check-unix.outputs.found == 'false' || steps.yq-check-windows.outputs.found == 'false')
       uses: AnimMouse/tool-cache@v1.0.5
       with:
         folder_name: yq
-
-#    - name: 'Install yq - Windows-ish'
-#      if: runner.os == 'Windows' && (steps.yq-check-unix.outputs.found == 'false' || inputs.force == 'true')
-#      shell: powershell
-#      env:
-#        YQ_VERSION: '${{ inputs.yq-version }}'
-#      run:
