--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -90,6 +90,9 @@ jobs:
       - name: Check yq - Windows-ish
         if: runner.os == 'Windows'
         run: |
+          Write-Host $Env:RUNNER_TOOL_CACHE
+          Write-Host (Get-ChildItem "$Env:RUNNER_TOOL_CACHE")
+          Write-Host (Get-ChildItem "$Env:RUNNER_TOOL_CACHE\yq")
           Write-Host (Get-Command "yq")
           yq --version
 
