--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -90,9 +90,7 @@ jobs:
       - name: Check yq - Windows-ish
         if: runner.os == 'Windows'
         run: |
-          Write-Host $Env:RUNNER_TOOL_CACHE
-          Get-ChildItem "$Env:RUNNER_TOOL_CACHE"
-          Get-ChildItem "$Env:RUNNER_TOOL_CACHE\yq"
+          Get-ChildItem "$Env:RUNNER_TOOL_CACHE" -Recurse
           Get-Command "yq"
           yq --version
 
