--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -90,7 +90,7 @@ jobs:
       - name: Check yq - Windows-ish
         if: runner.os == 'Windows'
         run: |
-          Get-ChildItem "$Env:RUNNER_TOOL_CACHE" -Recurse
+          Get-ChildItem "$Env:RUNNER_TOOL_CACHE\yq" -Recurse
           Get-Command "yq"
           yq --version
 
