--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -91,8 +91,8 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           Get-ChildItem "$Env:RUNNER_TOOL_CACHE\yq" -Recurse
-          Get-Command "yq"
-          yq --version
+          Get-Command "yq.exe"
+          yq.exe --version
 
       - name: Check Outputs - Windows-ish
         if: runner.os == 'Windows'
