--- a/.github/workflows/example-macos.yaml
+++ b/.github/workflows/example-macos.yaml
@@ -26,7 +26,9 @@ jobs:
       - name: 'Setup yq'
         uses: dcarbone/setup-yq-action@main
         with:
-          force: 'true'
+          version: '${{ inputs.version }}'
+          download-compressed: '${{ inputs.download-compressed }}'
+          force: '${{ inputs.force }}'
 
       - name: 'Check yq'
         run: |
