--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -21,15 +21,15 @@ jobs:
     strategy:
       matrix:
         image:
-#          - "ubuntu-latest"
-#          - "ubuntu-20.04"
-#          - "ubuntu-22.04"
-#          - "macos-latest"
-#          - "macos-11"
-#          - "macos-12"
+          - "ubuntu-latest"
+          - "ubuntu-20.04"
+          - "ubuntu-22.04"
+          - "macos-latest"
+          - "macos-11"
+          - "macos-12"
           - "windows-latest"
-#          - "windows-2022"
-#          - "windows-2019"
+          - "windows-2022"
+          - "windows-2019"
         download-compressed:
           - 'true'
           - 'false'
@@ -90,11 +90,6 @@ jobs:
       - name: Check yq - Windows-ish
         if: runner.os == 'Windows'
         run: |
-          Get-ChildItem "${{ runner.tool_cache }}"
-          Write-Host "------"
-          Get-ChildItem "${{ runner.tool_cache }}\yq"
-          Write-Host "------"
-          
           Get-Command "yq.exe"
           yq.exe --version
 
