--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -61,6 +61,7 @@ jobs:
           _installed='${{ steps.setup-yq.outputs.installed }}'
           _err=
           if [[ '${{ matrix.force }}' == 'true' ]]; then
+            # enabling "force" must result in an install
             if [[ '${{ steps.setup-yq.outputs.installed }}' != 'true' ]]; then
               echo 'Unexpected value for "installed":'
               echo 'Expected:   "true"'
@@ -69,6 +70,7 @@ jobs:
             fi
           else
             if [[ '${{ steps.setup-yq.outputs.found }}' == 'true' ]]; then
+              # if found, must not be installed without force
               if [[ '${{ steps.setup-yq.outputs.installed }}' != 'false' ]]; then
                 echo 'Unexpected value for "installed":'
                 echo 'Expected:   "false"'
@@ -76,6 +78,7 @@ jobs:
                 _err=1
               fi
             else
+              # if not found, must be installed
               if [[ '${{ steps.setup-yq.outputs.installed }}' != 'true' ]]; then
                 echo 'Unexpected value for "installed":'
                 echo 'Expected:   "true"'
@@ -85,7 +88,7 @@ jobs:
             fi
           fi
           if [ -n "${_err}" ]; then exit 1; fi;
-
+          
 
       - name: Check yq - Windows-ish
         if: runner.os == 'Windows'
@@ -97,4 +100,46 @@ jobs:
         if: runner.os == 'Windows'
         shell: powershell
         run: |
-          Write-Host "do something"
+          $ErrorActionPreference = 'Stop'
+          Set-StrictMode -Version Latest
+          $_installed='${{ steps.setup-yq.outputs.installed }}'
+          $_err = 0
+          if ("${{ matrix.force }}" -eq "true")
+          {
+              # enabling "force" must result in an install
+              if ("${{ steps.setup-yq.outputs.installed }}" -ne "true")
+              {
+                  Write-Host "Unexpected value for installed"
+                  Write-Host "Expected:   true"
+                  Write-Host "Actual:     ${{ steps.setup-yq.outputs.installed }}"
+                  $_err=1
+              }
+          }
+          else
+          {
+              if ("${{ steps.setup-yq.outputs.found }}" -eq "true")
+              {
+                  # if found, must not be installed without force
+                  if ("${{ steps.setup-yq.outputs.installed }}" -ne "false")
+                  {
+                      Write-Host "Unexpected value for installed"
+                      Write-Host "Expected:  false"
+                      Write-Host "Actual:    ${{ steps.setup-yq.outputs.installed }}"
+                      $_err=1
+                  }
+              }
+              else
+              {
+                  # if not found, must be installed
+                  if ("${{ steps.setup-yq.outputs.installed }}" -ne "true") {
+                      Write-Host "Unexpected value for installed"
+                      Write-Host "Expected:  true"
+                      Write-Host "Actual:    ${{ steps.setup-yq.outputs.installed }}"
+                      $_err=1
+                  }
+              }
+          }
+          if ("${_err}" -ne 0)
+          {
+              exit 1
+          }
