--- a/action.yaml
+++ b/action.yaml
@@ -23,10 +23,10 @@ inputs:
 outputs:
   found:
     description: "If 'true', yq was already found on this runner"
-    value: "${{ steps.yq-check-unix.outputs.found == 'true' }}"
+    value: "${{ steps.yq-check-unix.outputs.found == 'true' || steps.yq-check-windows.outputs.found == 'false' }}"
   installed:
     description: "If 'true', yq was installed by this action"
-    value: "${{ inputs.force == 'true' || steps.yq-check-unix.outputs.found == 'false' }}"
+    value: "${{ inputs.force == 'true' || steps.yq-check-unix.outputs.found == 'false' || steps.yq-check-windows.outputs.found == 'false' }}"
 
 runs:
   using: composite
