--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Setup yq
         id: install-yq
-        uses: dcarbone/install-yq@main
+        uses: dcarbone/install-yq-action@main
         with:
           force: '${{ matrix.force }}'
           download-compressed: '${{ matrix.download-compressed }}'
