--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -39,7 +39,7 @@ jobs:
     name: "Test Action - (img: ${{ matrix.image }}; dlcmp: ${{ matrix.download-compressed }}; force: ${{ matrix.force }})"
     runs-on: ${{ matrix.image }}
     steps:
-      - uses: actions/checkout@v3.1.0
+      - uses: actions/checkout@v4
 
       - name: Setup yq
         id: install-yq
@@ -57,6 +57,7 @@ jobs:
       - name: Check Outputs - Unix-ish
         if: runner.os == 'Linux' || runner.os == 'macOS'
         shell: bash -e {0}
+        # language=sh
         run: |
           _installed='${{ steps.install-yq.outputs.installed }}'
           _err=
@@ -99,6 +100,7 @@ jobs:
       - name: Check Outputs - Windows-ish
         if: runner.os == 'Windows'
         shell: powershell
+        # language=pwsh
         run: |
           $ErrorActionPreference = 'Stop'
           Set-StrictMode -Version Latest
