update tests to actually use branch being tested

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Setup yq
         id: install-yq
-        uses: dcarbone/install-yq-action@main
+        uses: ./
         with:
           force: '${{ matrix.force }}'
           download-compressed: '${{ matrix.download-compressed }}'
